# salome-paravis

./: CMakeLists.txt  INSTALL  Makefile.am  PARAVIS_version.h.in  SalomePARAVISConfig.cmake.in  build_configure  configure.ac  getwrapclasses.py  wrapfiles.cmake
adm_local/: CMakeLists.txt
adm_local/cmake_files/: CMakeLists.txt  FindPARAVIEW.cmake  FindSalomePARAVIS.cmake  FindSalomeParaView.cmake
adm_local/unix/: CMakeLists.txt  make_common_starter.am
adm_local/unix/config_files/: CMakeLists.txt  Makefile.am  check_Med.m4  check_Med2.m4  check_ParaView.m4  check_VISU.m4  med_check_sizeof_medint.m4
doc/: CMakeLists.txt  GeneralArchitecture.html  GeneralArchitecture.odt  Makefile.am  UserDocumentation.html  UserDocumentation.odt
doc/salome/: CMakeLists.txt  Makefile.am
doc/salome/gui/: CMakeLists.txt  Makefile.am  doxyfile.in
idl/: .gitignore  CMakeLists.txt  Makefile.am  PARAVIS_Gen.idl  PARAVIS_Gen_Types.idl  create_header.py  create_header.sh  create_hints.py  create_hints.sh  hints_paravis  pythonIDL.py  vtkWrapIDL.c  wrap.cmake
idl/no_wrap/: PARAVIS_Gen.idl  PVSERVER_Gen.idl
resources/: CMakeLists.txt  LightApp.xml  Makefile.am  PARAVISCatalog.xml.in  SalomeApp.xml  SalomeApp.xml.in
src/: CMakeLists.txt  Makefile.am
src/ENGINE/: CMakeLists.txt  Makefile.am  PARAVIS_Engine_i.cc  PARAVIS_Engine_i.hh
src/ENGINE/no_wrap/: PARAVIS.py  PARAVIS.py.in  PARAVIS_utils.py  PVSERVER.py  PVSERVER.py.in  PVSERVER_utils.py
src/Macro/: CMakeLists.txt  modes.py
src/PVGUI/: CMakeLists.txt  Makefile.am  PARAVIS_Gen_i.cc  PARAVIS_Gen_i.hh  PVGUI.qrc.in  PVGUI_DataModel.cxx  PVGUI_DataModel.h  PVGUI_MatplotlibMathTextUtilities.cxx  PVGUI_MatplotlibMathTextUtilities.h  PVGUI_Module.cxx  PVGUI_Module.h  PVGUI_Module_actions.cxx  PVGUI_Module_impl.h  PVGUI_Module_widgets.cxx  PVGUI_OutputWindowAdapter.cxx  PVGUI_OutputWindowAdapter.h  PVGUI_ParaViewSettingsPane.cxx  PVGUI_ParaViewSettingsPane.h  PVGUI_ProcessModuleHelper.cxx  PVGUI_ProcessModuleHelper.h  PVGUI_Tools.cxx  PVGUI_Tools.h  PVGUI_Trace.cxx  PVGUI_Trace.h  PVGUI_ViewManager.cxx  PVGUI_ViewManager.h  PVGUI_ViewModel.cxx  PVGUI_ViewModel.h  PVGUI_ViewWindow.cxx  PVGUI_ViewWindow.h  PV_Events.h  PV_I.h  PV_Tools.cxx  PV_Tools.h  create_class.py  create_class.sh  ui_pqOptionsDialog.h  wrap.cmake
src/PVGUI/deprecated/: PVGUI_MatplotlibMathTextUtilities.h  PV_Tools.cxx
src/PVGUI/resources/: PARAVIS_images.ts  PARAVIS_msg_en.ts  PARAVIS_msg_fr.ts  PARAVIS_msg_ja.ts  pqCustomSettingsWidget.ui  sampleservers.pvsc
src/PVGUI/view/: CMakeLists.txt  PVGUI_Behaviors.cxx  PVGUI_Behaviors.h  PVGUI_LogWindowAdapter.cxx  PVGUI_LogWindowAdapter.h  PVGUI_ViewManager.cxx  PVGUI_ViewManager.h  PVGUI_ViewModel.cxx  PVGUI_ViewModel.h  PVGUI_ViewWindow.h  PVViewer_Behaviors.cxx  PVViewer_Behaviors.h  PVViewer_ViewManager.cxx  PVViewer_ViewManager.h  PVViewer_ViewModel.h  PVViewer_ViewWindow.cxx  PVViewer_ViewWindow.h
src/PV_SWIG/: CMakeLists.txt  Makefile.am  paravis.py  paravisSM.py  presentations.py  pvsimple.py  servermanager.diff  simple.diff
src/PV_SWIG/VTKWrapping/: paravis.py  paravisSM.py  presentations.py  pvsimple.py  servermanager.diff  simple.diff
src/PV_SWIG/no_wrap/: paravis.py  paravisSM.py  presentations.py  pvserver.py  pvsimple.py
src/ParaView/: readme.txt  vtkParse.h
src/Plugins/: CMakeLists.txt
src/Plugins/ElevationSurface/: CMakeLists.txt  ElevationSurface.xml  ElevationSurfaceClient.xml  vtkElevationSurfaceFilter.cxx  vtkElevationSurfaceFilter.h
src/Plugins/EllipseBuilder/: CMakeLists.txt  EllipseBuilderFilter.xml  EllipseBuilderGUI.xml  pqEllipseBuilder.qrc  vtkEllipseBuilderFilter.cxx  vtkEllipseBuilderFilter.h
src/Plugins/ExtraxtFieldFilter/: CMakeLists.txt  ExtractFieldFilter.xml  ExtractFieldGUI.xml  pqExtractField.qrc  vtkExtractFieldFilter.cxx  vtkExtractFieldFilter.h
src/Plugins/Filter/: CMakeLists.txt  SampleFilter.xml  vtkMySampleFilter.cxx  vtkMySampleFilter.h
src/Plugins/IntegrationPoints/: CMakeLists.txt  ELNOFilter.xml  ELNOFilterClient.xml  vtkELNOFilter.cxx  vtkELNOFilter.h  vtkELNOMeshFilter.cxx  vtkELNOMeshFilter.h  vtkELNOSurfaceFilter.cxx  vtkELNOSurfaceFilter.h
src/Plugins/MEDReader/: CMakeLists.txt  TODO.txt  plugin.cmake
src/Plugins/MedReader/: CMakeLists.txt  plugin.cmake
src/Plugins/NavigationMode/: CMakeLists.txt  pqSetModeStarter.cxx  pqSetModeStarter.h
src/Plugins/ParaMEDCorba/: CMakeLists.txt  ParaMEDCorbaServerManager.xml  ParaMEDCorbaUserInterfaceSources.xml  ParaMEDMEM2VTK_defines.hxx  VTKMEDCouplingCMeshClient.cxx  VTKMEDCouplingCMeshClient.hxx  VTKMEDCouplingCurveLinearMeshClient.cxx  VTKMEDCouplingCurveLinearMeshClient.hxx  VTKMEDCouplingFieldClient.cxx  VTKMEDCouplingFieldClient.hxx  VTKMEDCouplingMeshClient.cxx  VTKMEDCouplingMeshClient.hxx  VTKMEDCouplingMultiFieldsClient.cxx  VTKMEDCouplingMultiFieldsClient.hxx  VTKMEDCouplingUMeshClient.cxx  VTKMEDCouplingUMeshClient.hxx  VTKParaMEDFieldClient.cxx  VTKParaMEDFieldClient.hxx  testParaMEDCorba.cxx  vtkParaMEDCorbaSource.cxx  vtkParaMEDCorbaSource.h
src/Plugins/ScaleVector/: CMakeLists.txt  ScaleVector.xml  ScaleVectorClient.xml  vtkScaleVectorFilter.cxx  vtkScaleVectorFilter.h
src/Plugins/TableReader/: CMakeLists.txt
src/Plugins/ToolBar/: CMakeLists.txt  MyToolBarActions.cxx  MyToolBarActions.h
src/Plugins/View/: CMakeLists.txt  MyDisplay.cxx  MyDisplay.h  MyView.cxx  MyView.h  MyViewActiveOptions.cxx  MyViewActiveOptions.h  MyViewOptions.cxx  MyViewOptions.h
src/VTKParser/: getwrapclasses.py  wrap.cmake
src/VTKWrapping/: CMakeLists.txt  GenerateWrapList.cmake  create_class.py  create_class.sh  getwrapclasses.py  readme.txt  wrap.cmake
test/: CMakeLists.txt  demo0.py  demo1.py  demo10.py  demo11.py  demo12.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo9.py  demo_14_med.py  demo_15_med.py
test/Pic/: Information.txt
test/VisuPrs/: CMakeLists.txt
test/VisuPrs/2D_viewer/: A0.py  A1.py  CMakeLists.txt
test/VisuPrs/3D_viewer/: A1.py  A2.py  A3.py  A4.py  A5.py  A6.py  A7.py  A8.py  A9.py  B0.py  B1.py  B2.py  CMakeLists.txt
test/VisuPrs/bugs/: A0.py  (+24 more)
(+761 files in other folders)
